# ClimAg

./: .editorconfig  .gitignore  .gitmodules  .pylintrc  AUTHORS.md  CITATION.cff  CONTRIBUTING.md  HISTORY.md  README.md  environment.yml  matplotlibrc  pyproject.toml  requirements.txt  zsh-conda-init.sh
.github/: CODEOWNERS  ISSUE_TEMPLATE.md
.github/workflows/: codeql.yml
climag/: __init__.py  cli.py  climag.py  climag_plot.py  download_data.py  fao_penman_monteith.py  modvege.py  modvege_consumption.py  modvege_lib.py  modvege_lib_read_input_files.py  modvege_lib_read_output_files.py  modvege_read_files.py  modvege_run.py  plot_configs.py  plot_facet_maps.py  plot_stats.py  run_modvege.py
climag/modvege/: lib_modvege.py  lib_read_input_files.py  lib_read_output_files.py  modvege.py  run_modvege.py
doc/: conf.py  index.rst
docs/: conf.py  index.rst
scripts/: download_data_boundary.py  eurocordex_ie.py  eurocordex_intake.py  hiresireland.py  modvege_eurocordex.py  modvege_example.py  modvege_hiresireland.py  modvege_mera.py  stats.py
scripts/data/: boundary_nuts_2021_01m_ie.py  boundary_ons_ni_wards_12_2022.py  boundary_osi_ie_electoral_divisions_2019.py  eurocordex_ie.py  eurocordex_intake.py  fao_penman_monteith.py  hiresireland.py  mera_1_process.py  mera_2_resample.py  mera_3_data_et.py  mera_4_modvege_input.py  mera_data_et.py  mera_modvege_input.py  mera_process.py  mera_resample.py  nuts_2021_01m_ie_boundary.py
scripts/plotting/: plot_configs.py  plot_facet_maps.py  plot_stats.py
src/: download_data.py
tests/: __init__.py  test_climag.py  test_modvege_consumption.py  test_modvege_lib.py
